# libsignon-glib

./: .gitignore  .gitmodules  ChangeLog  Makefile.am  README  configure.ac  libsignon-glib.pc.in
docs/reference/: libsignon-glib-docs.xml
libsignon-glib/: AUTHORS  Makefile.am  autogen.sh  configure.ac  signon-auth-session.h  signon-dbus-queue.c  signon-dbus-queue.h  signon-glib.h  signon-identity-info.c  signon-identity-info.h  signon-identity.c  signon-identity.h  signon-internals.h  signon-utils.c  signon.vapi  sso-auth-service.c  sso-auth-service.h
libsignon-glib/docs/reference/: Makefile.am  libsignon-glib-sections.txt
libsignon-glib/libsignon-glib/: .gitignore  Makefile.am  signon-auth-service.c  signon-auth-service.h  signon-auth-session.c  signon-errors.c  signon-errors.h  signon-marshal.list  signon-utils.h
libsignon-glib/pygobject/: Makefile.am
libsignon-glib/tests/: Makefile.am  check_signon.c  tests.xml
pygobject/: Signon.py
rpm/: libsignon-glib.changes  libsignon-glib.spec
tests/: .gitignore  signon-glib-test.sh
